Fix issue with dragging the topNav out on mobile, also forgot to commit topNav.js

--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -124,6 +124,15 @@ header {
     overflow: hidden;
 }
 
+.no-select {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
 header, main, footer {
     padding-left: 300px;
 }
